[project]
name = "telegram-cleaner"
version = "0.1.0"
description = "Personal Telegram janitor: sweep deleted-account ghosts, stale DMs, dead groups, and unread channels"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "rich>=13.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
